--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@pinia/nuxt": "^0.11.2",
+        "@tailwindcss/postcss": "^4.1.13",
         "@vueuse/core": "^13.9.0",
         "pinia": "^3.0.3"
     }
