--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,9 @@
     "test:coverage": "vitest --coverage"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^7.0.1",
+    "@fortawesome/vue-fontawesome": "^3.1.1",
     "axios": "^1.11.0",
     "lucide-vue-next": "^0.542.0",
     "pinia": "^3.0.3",
