--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "@fortawesome/fontawesome-svg-core": "^7.0.1",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/vue-fontawesome": "^3.1.1",
+    "@types/lodash-es": "^4.17.12",
     "axios": "^1.11.0",
+    "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.542.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
