--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,15 @@
     "@fortawesome/fontawesome-svg-core": "^7.0.1",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/vue-fontawesome": "^3.1.1",
+    "@intlify/eslint-plugin-vue-i18n": "^4.1.0",
+    "@intlify/unplugin-vue-i18n": "^11.0.0",
     "@types/lodash-es": "^4.17.12",
     "axios": "^1.11.0",
     "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.542.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
+    "vue-i18n": "^12.0.0-alpha.3",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
