feat: implement task notification system with email alerts and user interface
- Added TaskNotificationService for managing task notifications
- Created TaskNotificationController for API endpoints related to notifications
- Developed TaskNotificationMail for sending email notifications
- Implemented migration for task_notifications table
- Built NotificationBell component for displaying notifications in the UI
- Created useNotifications composable for managing notification state and actions
- Developed NotificationsPage for viewing and managing notifications
- Added filtering and sorting functionality for notifications
- Implemented pagination for notifications display

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-svg-core": "^7.0.1",
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/vue-fontawesome": "^3.1.1",
+    "@heroicons/vue": "^2.2.0",
     "@intlify/eslint-plugin-vue-i18n": "^4.1.0",
     "@intlify/unplugin-vue-i18n": "^11.0.0",
     "@types/lodash-es": "^4.17.12",
