--- a/backend/composer.json
+++ b/backend/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/horizon": "^5.33",
+        "laravel/reverb": "^1.5",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "spatie/laravel-data": "^4.17"
