--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,11 @@
     "@intlify/unplugin-vue-i18n": "^11.0.0",
     "@types/lodash-es": "^4.17.12",
     "axios": "^1.11.0",
+    "laravel-echo": "^2.2.0",
     "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.542.0",
     "pinia": "^3.0.3",
+    "pusher-js": "^8.4.0",
     "vue": "^3.5.18",
     "vue-i18n": "^12.0.0-alpha.3",
     "vue-router": "^4.5.1"
